--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
             <hr>
             <div class="row">
                 <div class="col-mid-6">
-                    <address>X-347 Ankita Sahu AS</address>
+                    <address>Bogota Colombia/address>
                     <p>Email:-test@email.com</p>
-                    <p>Phone:-34563463434</p>
+                    <p>Phone:-3006274931</p>
                 </div>
                 <div class="col-mid-6">
                     <div class="form-group">
