--- a/About.html
+++ b/About.html
@@ -10,12 +10,9 @@
         <header>
             <div class="main">
                 <div class="title">
-                    <h1> Konark Temple</h1>
+                    <h1> Baru </h1>
                      <p class="oo">
-            Konark Sun Temple (Konark Surya Mandir) is a 13th-century CE Sun temple
-            at Konark about 35 kilometres (22 mi) northeast from Puri on the coastline of Odisha,India.
-            The temple is attributed to king Narasimhadeva I 
-            of the Eastern Ganga Dynasty about 1250 CE.
+           The Isla Barú or Isla de Barú is a former peninsula south of Cartagena, Colombia.It was cut off from the mainland by the Canal del Dique, but is still connected by bridge. It projects out southwest from the southern end of Cartagena towards the Islas del Rosario. It is approximately 25 km long and in places is less than 1 km wide. Approximately 20,000 people live on the island.
             
         </p>
             <form action="https://en.wikipedia.org/wiki/Konark_Sun_Temple" method="get">
