--- a/About.html
+++ b/About.html
@@ -15,8 +15,8 @@
            The Isla Barú or Isla de Barú is a former peninsula south of Cartagena, Colombia.It was cut off from the mainland by the Canal del Dique, but is still connected by bridge. It projects out southwest from the southern end of Cartagena towards the Islas del Rosario. It is approximately 25 km long and in places is less than 1 km wide. Approximately 20,000 people live on the island.
             
         </p>
-            <form action="https://en.wikipedia.org/wiki/Konark_Sun_Temple" method="get">
-                <input type="submit" value="Konark Info">
+            <form action="https://en.wikipedia.org/wiki/Isla_Bar%C3%BA" method="get">
+                <input type="submit" value="More Info">
             </form>
                 </div>
             </div>
