--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
             <script>
             function greet()
             {
-                alert('Oops, Try Again Later, No Information About Ankita !');
+                alert('Oops, Try Again Later, No Information About me jajaja!');
             }
             </script>
     </head>
