--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="title">
-                    <h1>Konark Temple</h1>
+                    <h1>Colombia</h1>
                 </div>
             </div>
             <div class="button">
