--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="me.html">Me</a></li>
-                    <li><a href="gallary.html">Gallary</a></li>
+                    <li><a href="gallery.html">Gallary</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
